--- a/index.html
+++ b/index.html
@@ -58,12 +58,16 @@
                     <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li>
                     -->
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
-                    <ul><a class="dropdown">Past Editions</a>
-                        <a class="nav-link" href="https://msr4ps.netlify.app/msr4ps2022/">2022</a>
-                        <a class="nav-link" href="https://msr4ps.netlify.app/msr4ps2024/">2024</a>
-                    </ul>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
+                <div class="dropdown">
+              <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
             </nav>
 
         </div>
