--- a/index.html
+++ b/index.html
@@ -59,15 +59,11 @@
                     -->
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
                 </ul>
+                <ul class="dropdown">
+                    <li><a href="#">Item 1</a></li>
+                    <li><a href="#">Item 2</a></li>
+                </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
-                <div class="dropdown">
-              <button class="dropbtn">Dropdown</button>
-  <div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-</div>
             </nav>
 
         </div>
