--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li>
                     -->
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
-                </ul>
-                <ul class="dropdown">
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 2</a></li>
+                    <li><a class="dropdown" href="#">Locations</a>
+                        <li><a href="#">Item 1</a></li>
+                        <li><a href="#">Item 2</a></li>
+                    </li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
