--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
                     <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li>
                     -->
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
-                    <li><a class="dropdown" href="#">Locations</a>
-                        <li><a href="#">Item 1</a></li>
-                        <li><a href="#">Item 2</a></li>
+                    <li><a class="nav-link" href="#">Locations</a>
+                        <ul class="dropdown">
+                            <li><a href="#">Item 1</a></li>
+                            <li><a href="#">Item 2</a></li>                            
+                        </ul>
                     </li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
