--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                     <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li>
                     -->
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
-                    <li><a class="nav-link" href="#">Past Editions</a>
+                    <li>
+                        <a href="#">Past Editions</a>
                         <ul class="dropdown">
                             <li><a href="#">Item 1</a></li>
                             <li><a href="#">Item 2</a></li>                            
