--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     -->
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
                     <li>
-                        <a href="#">Past Editions</a>
+                        <a href="#">Past Eds</a>
                         <ul class="dropdown">
                             <li><a href="#">Item 1</a></li>
                             <li><a href="#">Item 2</a></li>                            
