--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                     <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
                     <li>
                         <a href="#">Past Eds</a>
-                        <ul class="dropdown">
-                            <li><a href="#">Item 1</a></li>
-                            <li><a href="#">Item 2</a></li>                            
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Item 1</a></li>
+                            <li><a class="dropdown-item" href="#">Item 2</a></li>                            
                         </ul>
                     </li>
                 </ul>
