--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                         Past Editions
                         </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="https://msr4ps.netlify.app/msr4ps2022/">2022</a></li>
-                                <li><a class="dropdown-item" href="https://msr4ps.netlify.app/msr4ps2024/">2024</a></li>
+                                <li><a class="dropdown-item" href="https://msr4ps.netlify.app/msr4ps2022/" target="_blank">2022</a></li>
+                                <li><a class="dropdown-item" href="https://msr4ps.netlify.app/msr4ps2024/" target="_blank">2024</a></li>
                             </ul>
                         </li>
                 </ul>
