--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                               data-aos="zoom-out" data-aos-delay="2000" data-aos-duration="1000" alt="logo"></div>
                     <h1 data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000">MSR4P&S 2025</h1>
                     <h2 style="margin-bottom: 6%" data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">The 3rd International Workshop on Mining Software Repositories Applications for Privacy and Security</h2>
-                    <h2 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">March 4, 2025 - Montreal, Canada</h2>
+                    <h2 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">March 4, 2025 - Montréal, Canada</h2>
                     <h3 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800"> Co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a></h3>
                 </div>
             </div>
@@ -121,7 +121,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
             <div class="row about-container">
                 <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Where and When? </h3>
                 <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> The 3rd International Workshop on Mining Software Repositories Applications for Privacy and Security
-                    will be held in Motreal, Canada, co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a>. </h4>
+                    will be held in Montréal, Canada, co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a>. </h4>
             </div>
         </div>
 
