--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -89,8 +89,7 @@
                     <li> MSR applications for security risk assessment.
                     <li> MSR applications for privacy requirements engineering.
                     <li> MSR applications for security vulnerabilities detection.
-                    <li> Engineering PETs through MSR methodologies.
-                    <li> Privacy-Enhancing Technologies through MSR.
+                    <li> Privacy-Enhancing Technologies (PETs) through MSR.
                     <li> MSR-based research for safety/security by design.
                     <li> Privacy-friendly MSRs (including mixed-methods).
                     <li> MSR-based mixed-methods on P&S research.
@@ -102,7 +101,7 @@
                     <li> MSR applications to P&S assurance.
                 </ul>
                 <h4> Special Topic of Interest </h4>
-                <p>Any paper within the scope of the workshop will be considered. Additionally, this year we especially welcome submissions elaborating on MSR applications for the security and privacy assessment of generative Artificial Intelligence (AI) models (e.g., GPT-3 and GitHub Copilot) and their impact on modern software engineering processes.</p>
+                <p>Any paper within the scope of the workshop will be considered. Additionally, this year we especially welcome submissions elaborating on MSR applications for Vulnerability management (including identifying, assessing, reporting on, managing, and remediating vulnerabilities) using generative AI.</p>
             </div>
         </div>
         
