--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -117,9 +117,9 @@
                     <code>\bibliographystyle{ACM-Reference-Format}</code>).</p> -->
                 <p> The authors have two options for submitting their papers:
                     <ul>
-                    <li><strong> Regular papers: </strong> Up to 8 pages, including references. Regular papers must describe original contributions in research and/or practice. Although they can be work-in-progress, the authors must present a clear path forward. These will be given a 15-minute presentation during the workshop.</li>
+                    <li><strong> Regular papers: </strong> Up to 8 pages, including references. Regular papers must describe original contributions in research and/or practice. Although they can be work-in-progress, the authors must present a clear path forward. TThese will be given a 15-minute presentation, plus 5 minutes for Q&A during the workshop.</li>
 
-                    <li><strong> Short papers:  </strong> Up to 4 pages, including references. Short papers encompass position papers, experience reports, work-in-progress, new trends papers, industrial reports, datasets and tools. These will be given a 7-minutes presentation during the workshop. </li>
+                    <li><strong> Short papers:  </strong> Up to 4 pages, including references. Short papers encompass position papers, experience reports, work-in-progress, new trends papers, industrial reports, datasets and tools. These will be given a 7-minutes presentation, plus 3 minutes for Q&A during the workshop. </li>
                     </ul>
                 </p>
                 <p> The workshop will follow a <mark>double-anonymous</mark> peer review process in alignment with SANER's Review Process policies. This means that the papers submitted must not reveal the authors’ identities in any way, omitting the names from the submission and referring to self-citations in the third person. The only exception will be dataset and tools papers, which will employ an optional single-anonymous review process.</p>
