--- a/index.html
+++ b/index.html
@@ -165,8 +165,9 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                         <div class="date" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
                             <h3><s style="color: #BEBEBE;">March 15th, 2024></s></h3>
                                 <!--<b style="font-size: 12pt; color: rgb(273, 179, 119); font-weight: 100"> DEADLINE EXTENDED!</b></h3>-->
-                            <h3><s style="color: #BEBEBE; font-size: 15pt;">March 8th, 2024</s></h3>
-                            <p>Paper submission</p>
+                                <!--<h3><s style="color: #BEBEBE; font-size: 15pt;">March 8th, 2024</s></h3>-->
+                            <h3>November 17th, 2024</h3>
+                            <p>Abstract submission</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <h3><s style="color: #BEBEBE; font-size: 15pt;">April 12th, 2024</s></h3>
