--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -101,7 +101,7 @@
                     <li> MSR applications to P&S assurance.
                 </ul>
                 <h4> Special Topic of Interest </h4>
-                <p>Any paper within the scope of the workshop will be considered. Additionally, this year we especially welcome submissions elaborating on MSR applications for Vulnerability management (including identifying, assessing, reporting on, managing, and remediating vulnerabilities) using generative AI.</p>
+                <p>Any paper within the scope of the workshop will be considered. Additionally, this year we especially welcome submissions elaborating on <b>MSR applications for vulnerability management</b> (including identifying, assessing, reporting on, managing, and remediating vulnerabilities) <b>using Generative AI</b>.</p>
             </div>
         </div>
         
