--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -125,7 +125,7 @@
                 <p> The workshop will follow a <mark>double-anonymous</mark> peer review process in alignment with SANER's Review Process policies. This means that the papers submitted must not reveal the authors’ identities in any way, omitting the names from the submission and referring to self-citations in the third person. The only exception will be dataset and tools papers, which will employ an optional single-anonymous review process.</p>
                 <p> All submitted papers will be reviewed regarding technical quality, relevance, significance, and clarity by the program committee. All workshop papers should be submitted electronically in PDF format through the workshop website (IEEE Format, Double Columns). Accepted papers will become part of the workshop proceedings.</p>
                 <p> Please note that for each accepted paper, at least one author <mark>must register</mark> at MSR4P&S 2025 and present it. This is mandatory to get the paper published in the proceedings.</p>
-                <h4> Link for the submission: <a href="https://easychair.org/conferences/?conf=secute2024" target="_blank"> https://easychair.org/conferences/?conf=secute2024 </a></h4>
+                <h4> Link for the submission: <a href="#" target="_blank"> T.B.A </a></h4>
             </br>
             </div>
         </div>
@@ -135,11 +135,11 @@
             <div class="grey" data-aos="fade-left" data-aos-delay="900" data-aos-duration="500">
                 <h3>Important dates</h3>
                 <ul>
-                    <li><strong>Paper submission:</strong> <s style="color: #BEBEBE;">March 15th, 2024</s></li>
-                    <li><strong>Paper notification:</strong> <s style="color: #BEBEBE;">April 12th, 2024</s></li>
-                    <li><strong>Early registration deadline:</strong> <s style="color: #BEBEBE;">April 26th, 2024</s></li>
-                    <li><strong>Paper camera-ready:</strong> <s style="color: #BEBEBE;">May 5th, 2024</s></li>
-                    <li><strong>Workshop:</strong> June 21st, 2024</li>
+                    <li><strong>Abstract submission:</strong> November 17th, 2024 </li>
+                    <li><strong>Paper submission:</strong> November 24th, 2024 </li>
+                    <li><strong>Notification:</strong> December 20th, 2024 </li>
+                    <li><strong>Paper camera-ready:</strong> January 10th, 2025 </li>
+                    <li><strong>Workshop:</strong> March 4th, 2025</li>
                   </ul>
                   
             </div>
