--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
 
             <div id="twitter">
                 <h2> Twitter </h2>
-<a class="twitter-timeline" href="https://twitter.com/MSR4PSworkshop?ref_src=twsrc%5Etfw">Tweets by MSR4PSworkshop</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>                
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Thank you so much to all who made MSR4P&amp;S possible, specially to the authors for their engaging presentations on <a href="https://twitter.com/hashtag/privacy?src=hash&amp;ref_src=twsrc%5Etfw">#privacy</a> <a href="https://twitter.com/hashtag/security?src=hash&amp;ref_src=twsrc%5Etfw">#security</a> <a href="https://twitter.com/hashtag/staticanalysis?src=hash&amp;ref_src=twsrc%5Etfw">#staticanalysis</a> <a href="https://twitter.com/hashtag/sbomsecurity?src=hash&amp;ref_src=twsrc%5Etfw">#sbomsecurity</a> <a href="https://twitter.com/hashtag/threatmodeling?src=hash&amp;ref_src=twsrc%5Etfw">#threatmodeling</a> and so much more! Proceedings will be online soon! Stay tuned! 🙌 <a href="https://twitter.com/SANERconf?ref_src=twsrc%5Etfw">@SANERconf</a> <a href="https://t.co/V02SHPLy2A">pic.twitter.com/V02SHPLy2A</a></p>&mdash; MSR4PS 2024 (@MSR4PSworkshop) <a href="https://twitter.com/MSR4PSworkshop/status/1767513027203514578?ref_src=twsrc%5Etfw">March 12, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>    
             </div>
         </div>
 
