--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -120,6 +120,7 @@
                     <li><strong> Regular papers: </strong> Up to 8 pages, including references. Regular papers must describe original contributions in research and/or practice. Although they can be work-in-progress, the authors must present a clear path forward. TThese will be given a 15-minute presentation, plus 5 minutes for Q&A during the workshop.</li>
 
                     <li><strong> Short papers:  </strong> Up to 4 pages, including references. Short papers encompass position papers, experience reports, work-in-progress, new trends papers, industrial reports, datasets and tools. These will be given a 7-minutes presentation, plus 3 minutes for Q&A during the workshop. </li>
+                    <li><strong> Posters: </strong> Authors need to submit a 2-page extended abstract that summarizes (1) the problem addressed by the poster, (2) the approach taken by the authors, and (3) the main results achieved so far. The extended abstract <mark>will not be published</mark> in the SANER 2025 proceedings.</li>
                     </ul>
                 </p>
                 <p> The workshop will follow a <mark>double-anonymous</mark> peer review process in alignment with SANER's Review Process policies. This means that the papers submitted must not reveal the authors’ identities in any way, omitting the names from the submission and referring to self-citations in the third person. The only exception will be dataset and tools papers, which will employ an optional single-anonymous review process.</p>
