--- a/committee.html
+++ b/committee.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>SECUTE 2024</title>
+    <title>MSR4P&S 2025</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="#"></script>
@@ -126,9 +126,9 @@
                                 <img src="assets/img/msr4ps/avatar.png" class="img-fluid" alt="">
                             </div>
                             <div class="member-info">
-                                <h5>T.B.A</h5>
-                                <span>T.B.A</span>
-                                <span>T.B.A</span>
+                                <h5><a href="https://johanneshaertel.github.io" target="_blank">Johannes Härtel</a></h5>
+                                <span>Vrije Universiteit Amsterdam</span>
+                                <span>Amsterdam, The Netherlands</span>
                             </div>
                         </div>
                     </div>
