--- a/committee.html
+++ b/committee.html
@@ -123,7 +123,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
                         <div class="member">
                             <div class="member-img">
-                                <img src="assets/img/msr4ps/avatar.png" class="img-fluid" alt="">
+                                <img src="assets/img/msr4ps/johannes.jpg" class="img-fluid" alt="">
                             </div>
                             <div class="member-info">
                                 <h5><a href="https://johanneshaertel.github.io" target="_blank">Johannes Härtel</a></h5>
