--- a/committee.html
+++ b/committee.html
@@ -140,13 +140,13 @@
             <h3> Program Committee (T.B.A) </h3>
             <div style="margin: 1%;">
                 <ul data-aos="fade-right" data-aos-delay="300" data-aos-duration="800">
-                    <li> <strong> ... </li>
-                    <li> <strong> ... </li>
-                    <li> <strong> ... </li>
-                    <li> <strong> ... </li>
-                    <li> <strong> ... </li>
-                    <li> <strong> ... </li>
-                    <li> <strong> ... </li>
+                    <li> <strong> Maura Pintor,	University of Cagliari (Italy) </li>
+                    <li> <strong> Dinusha Vatsalan, Macquarie University (Australia) </li>
+                    <li> <strong> Nalin Arachchilage, RMIT University (Australia) </li>
+                    <li> <strong> Antonino Sabetta, SAP Security Research (France) </li>
+                    <li> <strong> Peter Hegedus, University of Szeged (Hungary)  </li>
+                    <li> <strong> Maxwell Young, Mississippi State University (USA) </li>
+                    <li> <strong> Quang-Cuong Bui, Hamburg University of Technology (Germany) </li>
                     <li> <strong> ... </li>
                     <li> <strong> ... </li>
                 </ul>
