--- a/committee.html
+++ b/committee.html
@@ -147,7 +147,7 @@
                     <li> <strong> Peter Hegedus, University of Szeged (Hungary)  </li>
                     <li> <strong> Maxwell Young, Mississippi State University (USA) </li>
                     <li> <strong> Quang-Cuong Bui, Hamburg University of Technology (Germany) </li>
-                    <li> <strong> ... </li>
+                    <li> <strong> Gabriel Pedroza, ANSYS (France) </li>
                     <li> <strong> ... </li>
                 </ul>
             </div>
