--- a/committee.html
+++ b/committee.html
@@ -137,7 +137,7 @@
         </div>
         
         <div class="row class-container white" id="program_committee" style="margin-top:3%">
-            <h3> Program Committee (T.B.A) </h3>
+            <h3> Program Committee </h3>
             <div style="margin: 1%;">
                 <ul data-aos="fade-right" data-aos-delay="300" data-aos-duration="800">
                     <li> <strong> Maura Pintor,	University of Cagliari (Italy) </li>
