--- a/committee.html
+++ b/committee.html
@@ -148,7 +148,7 @@
                     <li> <strong> Maxwell Young, Mississippi State University (USA) </li>
                     <li> <strong> Quang-Cuong Bui, Hamburg University of Technology (Germany) </li>
                     <li> <strong> Gabriel Pedroza, ANSYS (France) </li>
-                    <li> <strong> ... </li>
+                    <li> <strong> Clemente Izurieta, Montana State University (USA) </li>
                 </ul>
             </div>
         </div>
