--- a/committee.html
+++ b/committee.html
@@ -149,6 +149,7 @@
                     <li> <strong> Quang-Cuong Bui, Hamburg University of Technology (Germany) </li>
                     <li> <strong> Gabriel Pedroza, ANSYS (France) </li>
                     <li> <strong> Clemente Izurieta, Montana State University (USA) </li>
+                    <li> <strong> Mehdi Tarrit Mirakhorli, University of Hawaii at Manoa  (USA) </strong></li>
                 </ul>
             </div>
         </div>
