--- a/committee.html
+++ b/committee.html
@@ -150,6 +150,9 @@
                     <li> <strong> Gabriel Pedroza, ANSYS (France) </li>
                     <li> <strong> Clemente Izurieta, Montana State University (USA) </li>
                     <li> <strong> Mehdi Tarrit Mirakhorli, University of Hawaii at Manoa  (USA) </strong></li>
+                    <li><strong> Emad Shihab, Concordia University (Canada)</strong></li>
+                    <li><strong> Mansooreh Zahedi, The University of Melbourne (Australia)</strong></li>
+                    <li><strong> Mojtaba Shahin, RMIT University (Australia)</strong></li>
                 </ul>
             </div>
         </div>
