--- a/committee.html
+++ b/committee.html
@@ -140,20 +140,24 @@
             <h3> Program Committee </h3>
             <div style="margin: 1%;">
                 <ul data-aos="fade-right" data-aos-delay="300" data-aos-duration="800">
-                    <li> <strong> Maura Pintor,	University of Cagliari (Italy) </li>
-                    <li> <strong> Dinusha Vatsalan, Macquarie University (Australia) </li>
-                    <li> <strong> Nalin Arachchilage, RMIT University (Australia) </li>
-                    <li> <strong> Antonino Sabetta, SAP Security Research (France) </li>
-                    <li> <strong> Peter Hegedus, University of Szeged (Hungary)  </li>
-                    <li> <strong> Maxwell Young, Mississippi State University (USA) </li>
-                    <li> <strong> Quang-Cuong Bui, Hamburg University of Technology (Germany) </li>
-                    <li> <strong> Gabriel Pedroza, ANSYS (France) </li>
-                    <li> <strong> Clemente Izurieta, Montana State University (USA) </li>
-                    <li> <strong> Mehdi Tarrit Mirakhorli, University of Hawaii at Manoa  (USA) </strong></li>
+                    <li> <strong> Maura Pintor </strong>, University of Cagliari (Italy) </li>
+                    <li> <strong> Dinusha Vatsalan </strong>, Macquarie University (Australia) </li>
+                    <li> <strong> Nalin Arachchilage </strong>, RMIT University (Australia) </li>
+                    <li> <strong> Antonino Sabetta </strong>, SAP Security Research (France) </li>
+                    <li> <strong> Peter Hegedus </strong>, University of Szeged (Hungary)  </li>
+                    <li> <strong> Maxwell Young </strong>, Mississippi State University (USA) </li>
+                    <li> <strong> Quang-Cuong Bui </strong>, Hamburg University of Technology (Germany) </li>
+                    <li> <strong> Gabriel Pedroza </strong>, ANSYS (France) </li>
+                    <li> <strong> Clemente Izurieta </strong>, Montana State University (USA) </li>
+                    <li> <strong> Mehdi Tarrit Mirakhorli </strong>, University of Hawaii at Manoa  (USA) </li>
                     <li> <strong> Emad Shihab, Concordia University (Canada)</strong></li>
                     <li> <strong> Mansooreh Zahedi, The University of Melbourne (Australia)</strong></li>
                     <li> <strong> Mojtaba Shahin, RMIT University (Australia)</strong></li>
                     <li> <strong> Muhammad Ikram, Macquaire University (Australia)</strong></li>
+                    <li> <strong> Moritz Mock, Free University of Bozen-Bolzano (Italy)</strong></li>
+                    <li> <strong> Imranur Rahman, North Carolina State University (USA)</strong></li>
+                    <li> <strong> Kaixuan Li, Nanyang Technological University (Singapore)</strong></li>
+                    <li> <strong> Pablo Valenzuela, University of Bern (Switzerland)</strong></li>
                 </ul>
             </div>
         </div>
