--- a/committee.html
+++ b/committee.html
@@ -150,14 +150,14 @@
                     <li> <strong> Gabriel Pedroza </strong>, ANSYS (France) </li>
                     <li> <strong> Clemente Izurieta </strong>, Montana State University (USA) </li>
                     <li> <strong> Mehdi Tarrit Mirakhorli </strong>, University of Hawaii at Manoa  (USA) </li>
-                    <li> <strong> Emad Shihab, Concordia University (Canada)</strong></li>
-                    <li> <strong> Mansooreh Zahedi, The University of Melbourne (Australia)</strong></li>
-                    <li> <strong> Mojtaba Shahin, RMIT University (Australia)</strong></li>
-                    <li> <strong> Muhammad Ikram, Macquaire University (Australia)</strong></li>
-                    <li> <strong> Moritz Mock, Free University of Bozen-Bolzano (Italy)</strong></li>
-                    <li> <strong> Imranur Rahman, North Carolina State University (USA)</strong></li>
-                    <li> <strong> Kaixuan Li, Nanyang Technological University (Singapore)</strong></li>
-                    <li> <strong> Pablo Valenzuela, University of Bern (Switzerland)</strong></li>
+                    <li> <strong> Emad Shihab </strong>, Concordia University (Canada) </li>
+                    <li> <strong> Mansooreh Zahedi </strong>, The University of Melbourne (Australia) </li>
+                    <li> <strong> Mojtaba Shahin </strong>, RMIT University (Australia) </li>
+                    <li> <strong> Muhammad Ikram </strong>, Macquaire University (Australia) </li>
+                    <li> <strong> Moritz Mock </strong>, Free University of Bozen-Bolzano (Italy) </li>
+                    <li> <strong> Imranur Rahman </strong>, North Carolina State University (USA) </li>
+                    <li> <strong> Kaixuan Li </strong>, Nanyang Technological University (Singapore) </li>
+                    <li> <strong> Pablo Valenzuela </strong>, University of Bern (Switzerland) </li>
                 </ul>
             </div>
         </div>
