--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -137,7 +137,7 @@
                 <h3>Important dates</h3>
                 <ul>
                     <li><strong>Abstract submission:</strong> November 17th, 2024 (recommended, not mandatory) </li>
-                    <li><strong>Paper submission (extended!):</strong> <s style="color: #BEBEBE;">November 15th, 2024</s> November 29th, 2024 </li>
+                    <li><strong>Paper submission (extended!):</strong> <s style="color: #BEBEBE;">November 15th, 2024</s> <font color="red">November 29th, 2024</font></li>
                     <li><strong>Notification:</strong> December 20th, 2024 </li>
                     <li><strong>Paper camera-ready:</strong> January 10th, 2025 </li>
                     <li><strong>Workshop:</strong> March 4th, 2025</li>
